[gd_scene load_steps=10 format=3 uid="uid://b7cq7ax7q4d0w"]

[ext_resource type="Script" uid="uid://chvw2bphkynjl" path="res://scripts/beginning_cutscene.gd" id="1_gs5sn"]
[ext_resource type="PackedScene" uid="uid://nbw0ptp4ilr4" path="res://scenes/Title-Cutscenes/scene_transition.tscn" id="2_y4ydt"]
[ext_resource type="Texture2D" uid="uid://c57qx7wkwfuqn" path="res://assets/cutscenes/Cutscene1.png" id="3_5ruw7"]
[ext_resource type="Texture2D" uid="uid://dwkrxixwonrxc" path="res://assets/cutscenes/Cutscene2.png" id="4_cbpof"]
[ext_resource type="Texture2D" uid="uid://bewoo8h4qhhe6" path="res://assets/cutscenes/Cutscene3.png" id="5_1d842"]
[ext_resource type="AudioStream" uid="uid://cnxqprpwgch1h" path="res://assets/sounds/sfx/glass_breaking_sfx.mp3" id="6_y4ydt"]
[ext_resource type="AudioStream" uid="uid://co6yavwftyr7h" path="res://assets/sounds/sfx/bubbles.mp3" id="7_1d842"]
[ext_resource type="AudioStream" uid="uid://bnqntlnnenufn" path="res://assets/sounds/sfx/metal-hit-10-193281.mp3" id="8_cbpof"]
[ext_resource type="AudioStream" uid="uid://dimnk5w6v2qgg" path="res://assets/sounds/sfx/fire-cracklingwav-14834.mp3" id="9_1d842"]

[node name="Beginning_Cutscene" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_gs5sn")

[node name="Scene_Transition" parent="." instance=ExtResource("2_y4ydt")]

[node name="Cutscene_1" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_5ruw7")

[node name="Cutscene_2" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4_cbpof")

[node name="Cutscene_3" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("5_1d842")

[node name="Bubbles_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_1d842")
bus = &"sfx"

[node name="Glass_breaking_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_y4ydt")
bus = &"sfx"

[node name="Metal_Hit_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_cbpof")
volume_db = -6.0
pitch_scale = 0.5
bus = &"sfx"

[node name="Campfire_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_1d842")
bus = &"sfx"
